--- a/src/app/direct-team/direct-team.component.html
+++ b/src/app/direct-team/direct-team.component.html
@@ -23,8 +23,8 @@
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let row of filteredData; let i = index">
-        <td>{{ i + 1 }}</td>
+      <tr *ngFor="let row of paginatedData; let i = index">
+        <td>{{ (currentPage - 1) * itemsPerPage + i + 1 }}</td>
         <td>{{ row.cdate }}</td>
         <td>{{ row.regid }}</td>
         <td>{{ row.name }}</td>
@@ -38,9 +38,27 @@
         <td>
           <span *ngIf="row.topupstatus == '0'" class="text-danger">Not Active</span>
           <span *ngIf="row.boardstatus == '1'" class="text-success">Active</span>
-          
         </td>
       </tr>
     </tbody>
   </table>
+  
+  <!-- Pagination Controls -->
+  <nav *ngIf="totalPages > 1" class="mt-3">
+    <ul class="pagination justify-content-center">
+      <li class="page-item" [class.disabled]="currentPage === 1">
+        <a class="page-link" (click)="changePage(currentPage - 1)">Previous</a>
+      </li>
+  
+      <li class="page-item"
+          *ngFor="let page of [].constructor(totalPages); let pageIndex = index"
+          [class.active]="currentPage === pageIndex + 1">
+        <a class="page-link" (click)="changePage(pageIndex + 1)">{{ pageIndex + 1 }}</a>
+      </li>
+  
+      <li class="page-item" [class.disabled]="currentPage === totalPages">
+        <a class="page-link" (click)="changePage(currentPage + 1)">Next</a>
+      </li>
+    </ul>
+  </nav>
   
