--- a/src/app/team-left/team-left.component.html
+++ b/src/app/team-left/team-left.component.html
@@ -34,30 +34,52 @@
     </style>
 
     <h4>Left Team</h4>
-    <table>
+    <table class="table">
         <thead>
-            <tr>
-                <th>S.No</th>
-                <th>Date</th>
-                <th>User Id</th>
-                <th>Subscription</th>
-                <th>Status</th>
-            </tr>
+          <tr>
+            <th>S.No</th>
+            <th>Date</th>
+            <th>User Id</th>
+            <th>Subscription</th>
+            <th>Status</th>
+          </tr>
         </thead>
         <tbody>
-            <tr *ngFor="let row of filteredData; let i='index'">
-                <td>{{i+1}}</td>
-                <td>{{row.cdate}}</td>
-                <td>{{row.forid}}</td>
-                 <td>
-                <span *ngIf="row.board == '0'" class="text-danger">Not Subscribe</span>
-                <span *ngIf="row.board == '1'" class="text-success">Subscribed</span>
-                <span *ngIf="row.board == '2'" class="text-primary">Silver Upgrade</span>
-                <span *ngIf="row.board == '3'" class="text-warning">Gold Upgrade</span>
-                <span *ngIf="row.board == '4'" class="text-info">Diamond Upgrade</span>
-                </td>
-                <td><span *ngIf="row.status == '1'" class="text-success">Active</span>
-                <span *ngIf="row.status == '0'" class="text-danger">InActive</span></td>
-            </tr>
+          <tr *ngFor="let row of paginatedData; let i = index">
+            <td>{{ (currentPage - 1) * itemsPerPage + i + 1 }}</td>
+            <td>{{ row.cdate }}</td>
+            <td>{{ row.forid }}</td>
+            <td>
+              <span *ngIf="row.board == '0'" class="text-danger">Not Subscribe</span>
+              <span *ngIf="row.board == '1'" class="text-success">Subscribed</span>
+              <span *ngIf="row.board == '2'" class="text-primary">Silver Upgrade</span>
+              <span *ngIf="row.board == '3'" class="text-warning">Gold Upgrade</span>
+              <span *ngIf="row.board == '4'" class="text-info">Diamond Upgrade</span>
+            </td>
+            <td>
+              <span *ngIf="row.status == '1'" class="text-success">Active</span>
+              <span *ngIf="row.status == '0'" class="text-danger">Inactive</span>
+            </td>
+          </tr>
         </tbody>
-    </table>
+      </table>
+      
+      <!-- Pagination Controls -->
+      <nav *ngIf="totalPages > 1" class="mt-3">
+        <ul class="pagination justify-content-center">
+          <li class="page-item" [class.disabled]="currentPage === 1">
+            <a class="page-link" (click)="changePage(currentPage - 1)">Previous</a>
+          </li>
+      
+          <li class="page-item"
+              *ngFor="let page of [].constructor(totalPages); let pageIndex = index"
+              [class.active]="currentPage === pageIndex + 1">
+            <a class="page-link" (click)="changePage(pageIndex + 1)">{{ pageIndex + 1 }}</a>
+          </li>
+      
+          <li class="page-item" [class.disabled]="currentPage === totalPages">
+            <a class="page-link" (click)="changePage(currentPage + 1)">Next</a>
+          </li>
+        </ul>
+      </nav>
+      
