--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -277,6 +277,7 @@
             </tr>
           </thead>
           <tbody>
+            <!-- afkjnfnusdb -->
             <tr *ngFor="let item of activationDetails; let i = index">
               <td>{{i+1}}</td>
               <td>{{ item.cdate }}</td>
