--- a/src/app/sign-in/sign-in.component.scss
+++ b/src/app/sign-in/sign-in.component.scss
@@ -1,48 +1,23 @@
+.register-container {
+  background: #fff;
+}
 
-    .login-container {
-      background: rgba(255, 255, 255, 0.95);
-      padding: 2rem;
-      border-radius: 2rem;
-      text-align: center;
-      box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-      width: 100%;
-    }
+.input-wrapper {
+  position: relative;
+}
 
-    .login-container h1 {
-      color: #333;
-    }
+.input-icon {
+  position: absolute;
+  left: 12px;
+  top: 50%;
+  transform: translateY(-50%);
+  color: #555;
+  font-size: 0.9rem;
+  z-index: 2;
+}
 
-    .login-container p {
-      color: #666;
-    }
-
-    .form-control {
-      border-radius: 20px;
-      padding: 10px 15px;
-      margin-bottom: 1rem;
-    }
-
-    .btn-primary {
-      background-color: #007bff;
-      border: none;
-      border-radius: 20px;
-      padding: 10px 30px;
-      width: 100%;
-    }
-
-    .btn-primary:hover {
-      background-color: #0056b3;
-    }
-
-    .text-muted a {
-      color: #666;
-      text-decoration: none;
-    }
-
-    .text-muted a:hover {
-      text-decoration: underline;
-    }
-
-    /* .full-height {
-            max-height: 100vh;
-          } */
+.form-control,
+.form-select {
+  padding-left: 2.2rem;
+  border-radius: 20px;
+}
